few changed mainly setup

--- a/javascript-exercise-1.html
+++ b/javascript-exercise-1.html
@@ -5,6 +5,7 @@
     <title>Javascript Opgaver</title>
     <link rel="stylesheet" href="css/javascript-exercises.css" />
     <link rel="stylesheet" href="css/bounse.css" />
+    <script src="/js/javascript-exercise1.js"></script>
   </head>
   <body>
     <header>
@@ -16,11 +17,16 @@
         <h2>HTML Ipsum Presents</h2>
 
         <p>
-          <strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam,
-          feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-          <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat
-          wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum
-          rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.
+          <strong>Pellentesque habitant morbi tristique</strong> senectus et
+          netus et malesuada fames ac turpis egestas. Vestibulum tortor quam,
+          feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero
+          sit amet quam egestas semper.
+          <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.
+          Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat
+          wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet,
+          wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum
+          rutrum orci, sagittis tempus lacus enim ac dui.
+          <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.
         </p>
 
         <h3>Header Level 3</h3>
@@ -38,9 +44,13 @@
 
         <blockquote>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum repellendus aliquid quaerat repellat, consequatur ipsa fugit qui
-            perferendis, modi sed, obcaecati excepturi laboriosam quas incidunt id? Consectetur dolores eveniet numquam quasi consequuntur deserunt
-            itaque tempora voluptates neque. Impedit suscipit ipsum unde asperiores repudiandae totam quis corrupti eius. Ipsam, nam mollitia.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
+            repellendus aliquid quaerat repellat, consequatur ipsa fugit qui
+            perferendis, modi sed, obcaecati excepturi laboriosam quas incidunt
+            id? Consectetur dolores eveniet numquam quasi consequuntur deserunt
+            itaque tempora voluptates neque. Impedit suscipit ipsum unde
+            asperiores repudiandae totam quis corrupti eius. Ipsam, nam
+            mollitia.
           </p>
         </blockquote>
 
@@ -53,41 +63,65 @@
       </section>
       <section id="btnpanel">
         <div>
-          <button id="ex1" class="example" type="button">Klik her og udskift teksten i h1 med din egen tekst</button>
+          <button id="ex1" class="example" type="button">
+            Klik her og udskift teksten i h1 med din egen tekst
+          </button>
         </div>
         <div>
-          <button id="ex2" class="example" type="button">Klik her og farv alle paragraffer røde</button>
+          <button id="ex2" class="example" type="button">
+            Klik her og farv alle paragraffer røde
+          </button>
         </div>
         <div>
-          <button id="ex3" class="example" type="button">Klik her og rotér alle li tags</button>
+          <button id="ex3" class="example" type="button">
+            Klik her og rotér alle li tags
+          </button>
         </div>
         <div>
-          <button id="ex4" class="example" type="button">Klik her og skjul alle h tags</button>
+          <button id="ex4" class="example" type="button">
+            Klik her og skjul alle h tags
+          </button>
         </div>
         <div>
-          <button id="ex5" class="example" type="button">Klik her og skift typografi på links</button>
+          <button id="ex5" class="example" type="button">
+            Klik her og skift typografi på links
+          </button>
         </div>
         <div>
-          <button id="ex6" class="example" type="button">Klik her og indsæt et nyt li element efter punkt 5</button>
+          <button id="ex6" class="example" type="button">
+            Klik her og indsæt et nyt li element efter punkt 5
+          </button>
         </div>
         <div>
-          <button id="ex7" class="example" type="button">Klik her og skift farve på hver andet li tag</button>
+          <button id="ex7" class="example" type="button">
+            Klik her og skift farve på hver andet li tag
+          </button>
         </div>
 
         <div>
-          <button id="ex9" class="example" type="button">Klik her og få li tags til at flyve ind fra venstre</button>
+          <button id="ex9" class="example" type="button">
+            Klik her og få li tags til at flyve ind fra venstre
+          </button>
         </div>
         <div>
-          <button id="ex10" class="example" type="button">Klik her og skjul/vis de andre knapper</button>
+          <button id="ex10" class="example" type="button">
+            Klik her og skjul/vis de andre knapper
+          </button>
         </div>
         <div>
-          <button id="ex11" class="example" type="button">Klik her og rotér body tagget 15 grader</button>
+          <button id="ex11" class="example" type="button">
+            Klik her og rotér body tagget 15 grader
+          </button>
         </div>
         <div>
-          <button id="ex12" class="example" type="button">Klik her og forstør tekst (add class)</button>
+          <button id="ex12" class="example" type="button">
+            Klik her og forstør tekst (add class)
+          </button>
         </div>
         <div>
-          <button id="ex13" class="example" type="button">Klik her og forstør tekst (toggle class)</button>
+          <button id="ex13" class="example" type="button">
+            Klik her og forstør tekst (toggle class)
+          </button>
         </div>
       </section>
     </main>
